@@ -3,6 +3,9 @@
 # $Id: Changes,v 2.49 2013/03/05 03:12:49 dankogai Exp dankogai $
 #
 $Revision: 2.49 $ $Date: 2013/03/05 03:12:49 $
+! encoding.pm
+  Addressed RT#84709: 5.18 deprecation
+  https://rt.cpan.org/Ticket/Display.html?id=84709
 ! bin/piconv
   Applied RT#84695: Update piconv documentation
   https://rt.cpan.org/Ticket/Display.html?id=84695
